firethorn-ogsadai/distributed/server/src/main/grammar/output/SQL92QueryParser.java
// $ANTLR 3.5.1 /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g 2015-01-18 17:56:35

  package uk.org.ogsadai.parser.sql92query; 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class SQL92QueryParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASC", "BOUND", "CAST", "COLUMN", 
		"DESC", "EXCEPT", "EXCEPT_ALL", "FLOAT", "FROM_LIST", "FULL_OUTER_JOIN", 
		"FUNCTION", "GROUP_BY", "HAVING", "ID", "INT", "INTERSECT", "IS_NULL", 
		"JOIN", "LEFT_OUTER_JOIN", "LIMIT", "NOT", "NUMERIC", "ORDER", "QUERY", 
		"RELATION", "RIGHT_OUTER_JOIN", "SELECT_LIST", "SET", "SETOP", "STATEMENT", 
		"STRING", "TABLECOLUMN", "TOP", "UNION", "UNION_ALL", "WHERE", "WS", "'!='", 
		"'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'/'", "';'", "'<'", 
		"'<='", "'<>'", "'='", "'>'", "'>='", "'@'", "'ALL'", "'AND'", "'ANY'", 
		"'AS'", "'ASC'", "'BETWEEN'", "'BY'", "'CAST'", "'DATE'", "'DAY'", "'DEFAULT'", 
		"'DESC'", "'DISTINCT'", "'EXCEPT'", "'EXISTS'", "'FALSE'", "'FROM'", "'FULL'", 
		"'GROUP BY'", "'HAVING'", "'HOUR'", "'IN'", "'INNER'", "'INTERSECT'", 
		"'INTERVAL'", "'IS'", "'JOIN'", "'LEFT'", "'LIKE'", "'LIMIT'", "'MINUTE'", 
		"'MONTH'", "'NOT'", "'NULL'", "'ON'", "'OR'", "'ORDER'", "'OUTER'", "'RIGHT'", 
		"'SECOND'", "'SELECT'", "'SOME'", "'TIME'", "'TIMESTAMP'", "'TOP'", "'TRUE'", 
		"'UNION'", "'WHERE'", "'YEAR'", "'||'"
	};
	public static final int EOF=-1;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int T__86=86;
	public static final int T__87=87;
	public static final int T__88=88;
	public static final int T__89=89;
	public static final int T__90=90;
	public static final int T__91=91;
	public static final int T__92=92;
	public static final int T__93=93;
	public static final int T__94=94;
	public static final int T__95=95;
	public static final int T__96=96;
	public static final int T__97=97;
	public static final int T__98=98;
	public static final int T__99=99;
	public static final int T__100=100;
	public static final int T__101=101;
	public static final int T__102=102;
	public static final int T__103=103;
	public static final int T__104=104;
	public static final int T__105=105;
	public static final int T__106=106;
	public static final int T__107=107;
	public static final int ASC=4;
	public static final int BOUND=5;
	public static final int CAST=6;
	public static final int COLUMN=7;
	public static final int DESC=8;
	public static final int EXCEPT=9;
	public static final int EXCEPT_ALL=10;
	public static final int FLOAT=11;
	public static final int FROM_LIST=12;
	public static final int FULL_OUTER_JOIN=13;
	public static final int FUNCTION=14;
	public static final int GROUP_BY=15;
	public static final int HAVING=16;
	public static final int ID=17;
	public static final int INT=18;
	public static final int INTERSECT=19;
	public static final int IS_NULL=20;
	public static final int JOIN=21;
	public static final int LEFT_OUTER_JOIN=22;
	public static final int LIMIT=23;
	public static final int NOT=24;
	public static final int NUMERIC=25;
	public static final int ORDER=26;
	public static final int QUERY=27;
	public static final int RELATION=28;
	public static final int RIGHT_OUTER_JOIN=29;
	public static final int SELECT_LIST=30;
	public static final int SET=31;
	public static final int SETOP=32;
	public static final int STATEMENT=33;
	public static final int STRING=34;
	public static final int TABLECOLUMN=35;
	public static final int TOP=36;
	public static final int UNION=37;
	public static final int UNION_ALL=38;
	public static final int WHERE=39;
	public static final int WS=40;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public SQL92QueryParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public SQL92QueryParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return SQL92QueryParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g"; }


	protected Object recoverFromMismatchedToken(IntStream input, int ttype, BitSet follow) throws RecognitionException {
	    throw new MismatchedTokenException(ttype, input);
	}

	public Object recoverFromMismatchedSet(IntStream input, RecognitionException re, BitSet follow)
	    throws RecognitionException
	{
	    throw re;
	}


	public static class statement_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "statement"
	// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:96:1: statement : query_expression ( order_by )? ( limit )? ( ';' )? EOF -> ^( STATEMENT query_expression ( order_by )? ( limit )? ) ;
	public final SQL92QueryParser.statement_return statement() throws RecognitionException {
		SQL92QueryParser.statement_return retval = new SQL92QueryParser.statement_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal4=null;
		Token EOF5=null;
		ParserRuleReturnScope query_expression1 =null;
		ParserRuleReturnScope order_by2 =null;
		ParserRuleReturnScope limit3 =null;

		CommonTree char_literal4_tree=null;
		CommonTree EOF5_tree=null;
		RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_limit=new RewriteRuleSubtreeStream(adaptor,"rule limit");
		RewriteRuleSubtreeStream stream_order_by=new RewriteRuleSubtreeStream(adaptor,"rule order_by");
		RewriteRuleSubtreeStream stream_query_expression=new RewriteRuleSubtreeStream(adaptor,"rule query_expression");

		try {
			// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:97:5: ( query_expression ( order_by )? ( limit )? ( ';' )? EOF -> ^( STATEMENT query_expression ( order_by )? ( limit )? ) )
			// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:97:9: query_expression ( order_by )? ( limit )? ( ';' )? EOF
			{
			pushFollow(FOLLOW_query_expression_in_statement322);
			query_expression1=query_expression();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_query_expression.add(query_expression1.getTree());
			// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:97:26: ( order_by )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==94) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:97:26: order_by
					{
					pushFollow(FOLLOW_order_by_in_statement324);
					order_by2=order_by();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_order_by.add(order_by2.getTree());
					}
					break;

			}

			// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:97:36: ( limit )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==87) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:97:36: limit
					{
					pushFollow(FOLLOW_limit_in_statement327);
					limit3=limit();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_limit.add(limit3.getTree());
					}
					break;

			}

			// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:97:43: ( ';' )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==50) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:97:43: ';'
					{
					char_literal4=(Token)match(input,50,FOLLOW_50_in_statement330); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_50.add(char_literal4);

					}
					break;

			}

			EOF5=(Token)match(input,EOF,FOLLOW_EOF_in_statement333); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_EOF.add(EOF5);

			// AST REWRITE
			// elements: query_expression, order_by, limit
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 97:52: -> ^( STATEMENT query_expression ( order_by )? ( limit )? )
			{
				// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:97:55: ^( STATEMENT query_expression ( order_by )? ( limit )? )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(STATEMENT, "STATEMENT"), root_1);
				adaptor.addChild(root_1, stream_query_expression.nextTree());
				// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:97:84: ( order_by )?
				if ( stream_order_by.hasNext() ) {
					adaptor.addChild(root_1, stream_order_by.nextTree());
				}
				stream_order_by.reset();

				// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:97:94: ( limit )?
				if ( stream_limit.hasNext() ) {
					adaptor.addChild(root_1, stream_limit.nextTree());
				}
				stream_limit.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		catch (RecognitionException re)
		{
		    reportError(re);
		    throw re;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class limit_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "limit"
	// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:100:1: limit : 'LIMIT' INT -> ^( LIMIT INT ) ;
	public final SQL92QueryParser.limit_return limit() throws RecognitionException {
		SQL92QueryParser.limit_return retval = new SQL92QueryParser.limit_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal6=null;
		Token INT7=null;

		CommonTree string_literal6_tree=null;
		CommonTree INT7_tree=null;
		RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");
		RewriteRuleTokenStream stream_87=new RewriteRuleTokenStream(adaptor,"token 87");

		try {
			// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:101:5: ( 'LIMIT' INT -> ^( LIMIT INT ) )
			// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:101:7: 'LIMIT' INT
			{
			string_literal6=(Token)match(input,87,FOLLOW_87_in_limit370); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_87.add(string_literal6);

			INT7=(Token)match(input,INT,FOLLOW_INT_in_limit372); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_INT.add(INT7);

			// AST REWRITE
			// elements: INT
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 101:19: -> ^( LIMIT INT )
			{
				// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:101:22: ^( LIMIT INT )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(LIMIT, "LIMIT"), root_1);
				adaptor.addChild(root_1, stream_INT.nextNode());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		catch (RecognitionException re)
		{
		    reportError(re);
		    throw re;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "limit"


	public static class top_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "top"
	// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:103:1: top : 'TOP' INT -> ^( TOP INT ) ;
	public final SQL92QueryParser.top_return top() throws RecognitionException {
		SQL92QueryParser.top_return retval = new SQL92QueryParser.top_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal8=null;
		Token INT9=null;

		CommonTree string_literal8_tree=null;
		CommonTree INT9_tree=null;
		RewriteRuleTokenStream stream_102=new RewriteRuleTokenStream(adaptor,"token 102");
		RewriteRuleTokenStream stream_INT=new RewriteRuleTokenStream(adaptor,"token INT");

		try {
			// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:104:5: ( 'TOP' INT -> ^( TOP INT ) )
			// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:104:7: 'TOP' INT
			{
			string_literal8=(Token)match(input,102,FOLLOW_102_in_top398); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_102.add(string_literal8);

			INT9=(Token)match(input,INT,FOLLOW_INT_in_top400); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_INT.add(INT9);

			// AST REWRITE
			// elements: INT
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 104:17: -> ^( TOP INT )
			{
				// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:104:20: ^( TOP INT )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(TOP, "TOP"), root_1);
				adaptor.addChild(root_1, stream_INT.nextNode());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		catch (RecognitionException re)
		{
		    reportError(re);
		    throw re;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "top"


	public static class query_expression_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "query_expression"
	// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:106:1: query_expression : query ( set_op ^ query )* ;
	public final SQL92QueryParser.query_expression_return query_expression() throws RecognitionException {
		SQL92QueryParser.query_expression_return retval = new SQL92QueryParser.query_expression_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope query10 =null;
		ParserRuleReturnScope set_op11 =null;
		ParserRuleReturnScope query12 =null;


		try {
			// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:107:5: ( query ( set_op ^ query )* )
			// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:107:9: query ( set_op ^ query )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_query_in_query_expression429);
			query10=query();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, query10.getTree());

			// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:107:15: ( set_op ^ query )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==71||LA4_0==81||LA4_0==104) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:107:16: set_op ^ query
					{
					pushFollow(FOLLOW_set_op_in_query_expression432);
					set_op11=set_op();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) root_0 = (CommonTree)adaptor.becomeRoot(set_op11.getTree(), root_0);
					pushFollow(FOLLOW_query_in_query_expression435);
					query12=query();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, query12.getTree());

					}
					break;

				default :
					break loop4;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}

		catch (RecognitionException re)
		{
		    reportError(re);
		    throw re;
		}

		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "query_expression"


	public static class set_op_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "set_op"
	// /home/stelios/hg/firethorn-ogsadai/distributed/server/src/main/grammar/SQL92Query.g:109:1: set_op : ( 'UNION' 'ALL' -> ^( UNION_ALL ) | 'UNION' -> ^( UNION ) | 'EXCEPT' 'ALL' -> ^( EXCEPT_ALL ) | 'EXCEPT' -> ^( EXCEPT ) | 'INTERSECT' -> ^( INTERSECT ) );
	public final SQL92QueryParser.set_op_return set_op() throws RecognitionException {
		SQL92QueryParser.set_op_return retval = new SQL92QueryParser.set_op_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal13=null;
		Token string_literal14=null;
		Token string_literal15=null;
		Token string_literal16=null;
		Token string_literal17=null;
		Token string_literal18=null;
		Token string_literal19=null;

		CommonTree string_literal13_tree=null;
		CommonTree string_literal14_tree=null;
		CommonTree string_literal15_tree=null;
		CommonTree string_literal16_tree=null;
		CommonTree string_literal17_tree=null;
		CommonTree string_literal18_tree=null;
		CommonTree string_literal19_tree=null;
		RewriteRuleTokenStream stream_58=new RewriteRuleTokenStream(adaptor,"token 58");
		RewriteRuleTokenStream stream_104=new RewriteRuleTokenStream(adaptor,"token 104");
		RewriteRuleTokenStream stream_81=new RewriteRuleTokenStream(adaptor,"token 81");
		RewriteRuleTokenStream stream_71=new RewriteRuleTokenStream(adaptor,"token 71");
